# Test2504

./: .env.example  .gitignore  ADVANCED_MODELS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE.md  compare_models.py  config.yaml  docker-compose.yml  emotion_log.txt  install_models.py  main.py  pyproject.toml  requirements.txt  test_modules.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: finetune_emotion.yaml
configs/datasets/: face_detection.yaml
docs/: MODELS_IMPLEMENTATION.md  PRODUCT_STRATEGY.md  QUICKSTART.md  REFACTORING_NOTES.md  ROADMAP.md  datasets.md  gpu_requirements.md  installation.md  log_analysis.md  policy_eval.md  training.md
scripts/: compare_models.py  download_datasets.py  finetune_emotion.py  install_models.py  train_yolo_face.py
src/: __init__.py  advanced_detectors.py  analyzer.py  config.py  data_manager.py  detector.py  ui.py  video_processor.py
src/emotisense/: __init__.py  __main__.py  advanced_detectors.py  analyzer.py  app.py  cli.py  config.py  data_manager.py  detector.py  product_ops.py  ui.py  video_processor.py
src/emotisense/training/: __init__.py
tests/: test_config.py  test_data_manager.py  test_product_ops.py
