[project]
name = "emotisense"
version = "3.1.0"
description = "Professional real-time emotion detection and analysis platform"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "opencv-python>=4.8.1.78",
  "numpy>=1.23.5",
  "deepface>=0.0.79",
  "tensorflow>=2.12.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
models = [
  "hsemotion>=0.2.0",
  "timm>=0.9.0",
  "fer>=22.5.0",
]
train = [
  "ultralytics>=8.3.0",
  "huggingface-hub[cli]>=0.25.0",
  "datasets>=3.0.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "I"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
